--- a/package.json
+++ b/package.json
@@ -10,8 +10,48 @@
     "prepare": "husky install"
   },
   "devDependencies": {
-    "@astrojs/renderer-svelte": "^0.2.0",
-    "astro": "^0.21.0",
-    "husky": "^7.0.4"
+    "@astrojs/renderer-svelte": "^0.2.2",
+    "astro": "^0.21.10",
+    "autoprefixer": "^10.4.0",
+    "husky": "^7.0.4",
+    "postcss": "^8.3.11",
+    "postcss-html": "^1.2.0",
+    "sass": "^1.43.4",
+    "stylelint": "^14.1.0",
+    "stylelint-config-html": "^1.0.0",
+    "stylelint-config-standard": "^24.0.0",
+    "stylelint-config-standard-scss": "^3.0.0",
+    "svelte-preprocess": "^4.9.8"
+  },
+  "stylelint": {
+    "extends": [
+      "stylelint-config-standard-scss",
+      "stylelint-config-html"
+    ],
+    "rules": {
+      "scss/no-global-function-names": null,
+      "selector-pseudo-class-no-unknown": [
+        true,
+        {
+          "ignorePseudoClasses": [
+            "global"
+          ]
+        }
+      ]
+    },
+    "overrides": [
+      {
+        "files": [
+          "**/*.astro"
+        ],
+        "customSyntax": "postcss-html"
+      }
+    ],
+    "ignoreFiles": [
+      "dist/**/*"
+    ]
+  },
+  "dependencies": {
+    "splitting": "^1.0.6"
   }
 }
