chore: things falling in place, still early

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     ],
     "rules": {
       "scss/no-global-function-names": null,
+      "no-descending-specificity": null,
       "selector-pseudo-class-no-unknown": [
         true,
         {
