refactor: pretty much everything

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,3 @@
 {
-  "moduleResolution": "node",
-  "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@/components/*": ["components/*"]
-    }
-  }
+  "moduleResolution": "node"
 }
