--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "husky": "^7.0.4",
     "postcss": "^8.3.11",
     "postcss-html": "^1.2.0",
+    "postcss-import": "^14.0.2",
+    "postcss-nesting": "^10.0.2",
     "prettier": "^2.5.1",
     "prettier-plugin-astro": "^0.0.11",
     "sass": "^1.43.4",
@@ -58,6 +60,7 @@
   },
   "dependencies": {
     "js-cookie": "^3.0.1",
+    "open-props": "^1.0.12",
     "rfs": "^9.0.6",
     "splitting": "^1.0.6"
   }
