--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "autoprefixer": "^10.4.0",
     "husky": "^7.0.4",
     "postcss": "^8.3.11",
+    "postcss-custom-media": "^8.0.0",
     "postcss-html": "^1.2.0",
     "postcss-import": "^14.0.2",
+    "postcss-jit-props": "^1.0.2",
+    "postcss-media-minmax": "^5.0.0",
     "postcss-nesting": "^10.0.2",
+    "postcss-preset-env": "^7.0.1",
     "prettier": "^2.5.1",
     "prettier-plugin-astro": "^0.0.11",
     "sass": "^1.43.4",
